# sonic-desugar

./: README.md  sonic-desugar.cabal
.github/workflows/: ci.yaml
src/Language/Sonic/Compiler/: Desugar.hs
src/Language/Sonic/Compiler/Desugar/: Attribute.hs  Declaration.hs  Desugarable.hs  Expression.hs  Internal.hs  Kind.hs  Literal.hs  Module.hs  Name.hs  Path.hs  Pattern.hs  Report.hs  Type.hs
src/Language/Sonic/Compiler/Desugar/IR/: Declaration.hs  Expression.hs  Instance.hs  Kind.hs  Module.hs  Pass.hs  Pattern.hs  Type.hs
test/: TestImport.hs  golden.hs
test/golden/: attribute.sonic.golden  class.sonic.golden  data.sonic.golden  duplicated_binding.sonic  duplicated_binding.sonic.golden  duplicated_signature.sonic  duplicated_signature.sonic.golden  function.sonic.golden  invalid_function.sonic  invalid_function.sonic.golden  signature.sonic  signature.sonic.golden  simple.sonic.golden  standalone_signature.sonic  standalone_signature.sonic.golden
