cabal-version:      2.0
name:               sonic-desugar
version:            0.1.0.0
synopsis:           Desugar Sonic syntax into IR
description:        @sonic-desugar@ provides a desugar pass of sonic compiler
bug-reports:        https://github.com/sonic-lang/sonic-desugar/issues
homepage:           https://github.com/sonic-lang/sonic-desugar#readme
license:            GPL-2
license-file:       COPYING.md
author:             coord_e
maintainer:         coord_e <me@coord-e.com>
copyright:          Copyright 2020 coord_e
category:           Language
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

-- see .github/workflows
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1

source-repository head
  type:     git
  location: https://github.com/sonic-lang/sonic-desugar

library
  hs-source-dirs:     src
  exposed-modules:
    Language.Sonic.Compiler.Desugar
    Language.Sonic.Compiler.Desugar.IR.Expression
    Language.Sonic.Compiler.Desugar.IR.Instance
    Language.Sonic.Compiler.Desugar.IR.Kind
    Language.Sonic.Compiler.Desugar.IR.Module
    Language.Sonic.Compiler.Desugar.IR.Pass
    Language.Sonic.Compiler.Desugar.IR.Pattern
    Language.Sonic.Compiler.Desugar.IR.Type

  other-modules:
    Language.Sonic.Compiler.Desugar.Attribute
    Language.Sonic.Compiler.Desugar.Declaration
    Language.Sonic.Compiler.Desugar.Desugarable
    Language.Sonic.Compiler.Desugar.Expression
    Language.Sonic.Compiler.Desugar.Internal
    Language.Sonic.Compiler.Desugar.Kind
    Language.Sonic.Compiler.Desugar.Literal
    Language.Sonic.Compiler.Desugar.Module
    Language.Sonic.Compiler.Desugar.Name
    Language.Sonic.Compiler.Desugar.Path
    Language.Sonic.Compiler.Desugar.Pattern
    Language.Sonic.Compiler.Desugar.Report
    Language.Sonic.Compiler.Desugar.Type

  build-depends:
      base           >=4.11.0 && <5
    , containers
    , microlens
    , microlens-mtl
    , microlens-th
    , mtl
    , sonic-ir
    , sonic-pass
    , sonic-syntax
    , transformers

  default-language:   Haskell2010
  default-extensions: DeriveGeneric
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
